--- a/package.json
+++ b/package.json
@@ -29,6 +29,16 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.32.0",
+    "eslint-config-astro": "^1.0.8",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.3"
   }
 }
