feat: add TinaCMS configuration for content management

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "tinacms build && astro check && astro build",
     "preview": "astro preview --host",
     "astro": "astro",
     "prepare": "husky",
@@ -21,6 +21,7 @@
     "@fontsource/inter": "^5.0.18",
     "@fontsource/plus-jakarta-sans": "^5.0.20",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@tinacms/cli": "^1.10.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.8",
@@ -30,6 +31,7 @@
     "react-dom": "^19.1.1",
     "react-toastify": "^11.0.5",
     "swiper": "^11.1.1",
+    "tinacms": "^2.8.1",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
