fix: resolve astro check memory issues and ESLint config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
-    "build": "tinacms build && astro check && astro build",
+    "build": "astro check && astro build",
+    "build:astro": "astro build",
+    "build:check": "astro check",
     "preview": "astro preview --host",
     "astro": "astro",
     "prepare": "husky",
