--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,18 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
-  }
+    "jsxImportSource": "react",
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "incremental": true,
+    "tsBuildInfoFile": ".tsbuildinfo"
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    ".astro",
+    "**/*.js",
+    "**/*.mjs",
+    "**/*.cjs"
+  ]
 }
