--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "tinacms build && astro check && astro build",
     "build:astro": "astro build",
     "build:check": "astro check",
     "preview": "astro preview --host",
