--- a/package.json
+++ b/package.json
@@ -17,32 +17,33 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.3.3",
+    "@astrojs/mdx": "^4.3.4",
     "@astrojs/react": "^4.3.0",
-    "@fontsource/inter": "^5.0.18",
-    "@fontsource/plus-jakarta-sans": "^5.0.20",
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/plus-jakarta-sans": "^5.2.6",
     "@fortawesome/fontawesome-free": "^7.0.0",
-    "@tinacms/cli": "^1.10.1",
-    "@types/react": "^19.1.9",
+    "@tinacms/cli": "^1.10.2",
+    "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
-    "astro": "^5.12.8",
+    "astro": "^5.13.3",
     "github-slugger": "^2.0.0",
     "jos-animation": "^0.9.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-toastify": "^11.0.5",
-    "swiper": "^11.1.1",
-    "tinacms": "^2.8.1",
+    "swiper": "^11.2.10",
+    "tinacms": "^2.8.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.32.0",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "eslint": "^9.32.0",
+    "@eslint/js": "^9.34.0",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.34.0",
     "eslint-config-astro": "^1.0.8",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.3.1",
@@ -50,6 +51,6 @@
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.40.0"
   }
 }
